2004-12-17 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, src/interface.cc, cli/socket.cc: removed
	dependencies on GTK 2.0.


2004-12-19 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: added examples/scripts/client_interface.h
	  to installation
	* mingw/makefile.mingw, gpsim/gpsim.vcproj: added gthread-2.0.lib
	* src/src.vcproj: removed plat\win32\glist.cpp from project; CLI
	  mode now requires linking with full glib library; added src/trigger.cc
	  and src/trigger.h to the project
	* modules/modules.vcproj: pthreads to the project
	* gpsim.sln: removed building of modules in CLI configuration

2004-12-17 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, src/interface.cc: replaced pthread_* calls and
	declarations with the corresponding GTK ones.

2004-12-17 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, src/interface.cc: Added experimental code to
	test threading.

2004-12-16 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, gui/gui_menu.cc: Use the interface instead of
	the cpu pointer to initiate simulation.
	* src/Makefile.am, src/trigger.cc, src/trigger.h,
	src/breakpoints.cc, src/breakpoints.h: Split the
	trigger classes away from the breakpoint classes.
	* src/gpsim_interface.h, src/init.cc, src/interface.cc,
	src/pic-processor.cc, src/protocol.cc, src/protocol.h,
	src/trace.h, cli/cmd_run.cc, cli/cmd_set.cc, cli/cmd_trace.cc,
	cli/input.cc, cli/socket.cc:
	Attempted (but failed) to add a feature that would allow a socket
	interface to send data to the simulator while a simulation is
	running. It turns out that the giochannel stuff used to control
	the socket runs in the gui event loop. The only time the socket is
	handled is whenever the loop can run. However, since gpsim is a
	single threaded application (the gui does spawn its own private
	thread), the gui event loop only runs whenever the simulation
	gives it cpu time. Thus it's not possible for a socket to update