@@ -1,3 +1,8 @@
+2005-01-02 Borut Razem <borut.razem@siol.net>
+	* gui/gui_break.cc, gui/dialog.cc, gui/gui_init.cc, gui/gui_menu.cc,
+	  gui/gui_processor.cc, gui/gui_src.cc, gui/gui_src_asm.cc
+	  gui/gui_src_opcode.cc: removed unneeded include gtkcombobox.h
+
 2004-12-17 Scott Dattalo <scott@dattalo.com>
 	* gui/gui_main.cc, src/interface.cc, cli/socket.cc: removed
 	dependencies on GTK 2.0.
